# zephyr-programs

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  deploy.sh  deploy_all.sh  docker-compose.yml  interfaceFactory.txt  package.json  pairs-testnet.json  ssw_pairs_recreate.json  tsconfig.json  vercel.json  zephyr.toml
.github/workflows/: run-tests.yml
aqua/: zephyr.toml
aqua/src/: lib.rs
docker/: run.sh
mercury-helpers/: init-catchups-testnet.sh  package.json  pairs-catchups-mainnet.sh  pairs-catchups-testnet.sh  pairs-catchups.sh
node-api-vercel/: index.js  package.json
pages/api/: swagger.ts
phoenix/: Cargo.toml  config.json
phoenix/src/: lib.rs
programs/aqua/: Cargo.toml  zephyr.toml
programs/comet/: Cargo.toml  zephyr.toml
programs/comet/src/: lib.rs
programs/phoenix/: Cargo.toml  zephyr.toml
programs/soroswap/: Cargo.toml  (+2 more)
public/: mainnet.contract-addresses.json  mainnet.contracts.json  mainnet.zephyr-programs.json  mainnet.zephyr-tables.json  testnet.contract-addresses.json  testnet.contracts.json  testnet.zephyr-programs.json  testnet.zephyr-tables.json
scripts/: configs.json  deploy.sh  deploy_all.sh  factory_router_catchups.sh  get-tables.ts  mainnet.pairs-catchups.sh  pairs-catchups-generator.ts  recreatePairs.ts  repeated.ts  run.sh  testnet.pairs-catchups.sh  update_contract_addresses.sh  verify_catchup_status.sh
server/: .env.example  README.md  index.js  index.ts  next.config.js  package-lock.json  package.json  tsconfig.json  vercel.json
soroswap/: Cargo.toml  Dockerfile  zephyr.toml
src/: events.rs  lib.rs
(+228 files in other folders)
