[package]
name = "zephyr-hello-world"
version = "0.1.0"
edition = "2021"

[dependencies]
zephyr-sdk = { version = "0.1.6" }
stellar-strkey = "0.0.8"
soroban-sdk = { version = "20.2.0" }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
